Source/WebCore: Should fire error event for empty 404 script https://bugs.webkit.org/show_bug.cgi?id=50589

Patch by Edaena Salinas Jasso <edaena@apple.com> on 2012-06-07
Reviewed by Brady Eidson.

Tests:
http/tests/loading/fire-error-event-empty-404-script.html
http/tests/loading/fire-error-script-no-content-type.html

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveResponse): We should check for http status
codes here to stop depending on the response being non-empty.
(WebCore::SubresourceLoader::didReceiveData): Moved the http status check but
avoid messing with multipart responses.
(WebCore::SubresourceLoader::checkForHTTPStatusCodeError): Renamed from
errorLoadingResource for clarity.

* loader/SubresourceLoader.h:
* loader/cf/SubresourceLoaderCF.cpp:
(WebCore::SubresourceLoader::didReceiveDataArray):
Updated for errorLoadingResource renaming.

LayoutTests: Should fire error event for empty 404 script
https://bugs.webkit.org/show_bug.cgi?id=50589

Patch by Edaena Salinas Jasso <edaena@apple.com> on 2012-06-07
Reviewed by Brady Eidson.

Based on a test by Ojan Vafai.

* http/tests/loading/fire-error-event-empty-404-script-expected.txt: Added.
* http/tests/loading/fire-error-event-empty-404-script.html: Added.
* http/tests/loading/fire-error-event-script-no-content-type-expected.txt: Added.
* http/tests/loading/fire-error-event-script-no-content-type.html: Added.
* http/tests/loading/resources/404-with-empty-body-no-content-type.cgi: Added.
* http/tests/loading/resources/404-with-empty-body.cgi: Added.
* http/tests/resources/network-simulator.php: Fixed to no longer return 404 error
when logging a request.

Canonical link: https://commits.webkit.org/106398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119759 268f45cc-cd09-0410-ab3c-d52691b4dbfc