LayoutTests/http/tests/loading/resources/404-with-empty-body.cgi
@@ -1,0 +1,4 @@
+#!/usr/bin/perl -w
+
+print "Status: 404 Not Found\n";
+print "Content-type: text/javascript\n\n";
